# aether

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.app  LOG_VERIFICATION_UTILITY_SUMMARY.md  MISSION_GOALS.md  README.md  TODO.md  check_fstrings.py  check_python.py  docker-compose.yml  fly.toml  package-lock.json  package.json  railway.json  test_log_monitor.py  vercel.json
backend/: .env.example  Dockerfile  Procfile  alembic.ini  init.sql  main.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_git_target_columns.py
backend/app/: __init__.py  __main__.py  cli.py  config.py
backend/app/api/: __init__.py  aether_routes.py  auth_routes.py  deps.py  errors.py  main.py  (+4 more)
backend/tests/: conftest.py  mock_target.py  test_auth_routes.py  test_auth_service.py  test_brain_orchestrator.py  test_config.py  test_domain_verification.py  test_e2e_pipeline.py  test_email_service.py  test_errors.py  test_finalization_components.py  test_get_or_create_target.py  test_git_target_api.py  test_headers.py  test_heuristic_engine.py  test_intent_router.py  test_pdf_report.py  test_persistence_email_and_model_fallbacks.py  test_phase12_quota_guard.py  test_phase14_final_audit.py  test_privacy.py  test_quota_manager.py  test_rate_limiting.py  test_remediation_flow.py  test_remediation_tools.py  test_safety_gates.py  test_storage.py  test_storage_extended.py  test_timeout_persistence_refactor.py  test_validation_lanes_full.py  test_websockets.py
(+208 files in other folders)
