[project]
name = "aether"
version = "1.0.0"
description = "AETHER Security Intelligence Platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.45.0",
    "click>=8.1.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
aether = "app.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 30

[tool.coverage.html]
directory = "htmlcov"